--- a/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
+++ b/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <TargetFrameworks>uap10.0;netstandard1.4;net461;xamarinios10;MonoAndroid71;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>uap10.0;netstandard1.4;net461;xamarinios10;MonoAndroid80;netstandard2.0</TargetFrameworks>
     <Description>This .NET standard library enables access to different data sources such as Bing, Microsoft Graph, and OneDrive. It is part of the Windows Community Toolkit.</Description>
     <PackageTags>UWP Toolkit Windows Bing Microsoft Graph OneDrive</PackageTags>
     <Title>Windows Community Toolkit .NET Standard Services</Title>
@@ -16,7 +16,7 @@
     <DefineConstants Condition="'$(DisableImplicitFrameworkDefines)' != 'true'">$(DefineConstants);WINRT</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'MonoAndroid71' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0' ">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'MonoAndroid80' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0' ">
     <DefineConstants>$(DefineConstants);WINRT</DefineConstants>
   </PropertyGroup>
 
@@ -32,11 +32,14 @@
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
 	
-	<ItemGroup Condition="'$(TargetFrameworkIdentifier)' == 'MonoAndroid' or '$(TargetFrameworkIdentifier)' == 'Xamarin.iOS' or '$(TargetFramework)' == 'netstandard2.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'MonoAndroid80' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0'">
 		<PackageReference Include="Uno.UI" Version="1.31.0-dev.191" />
+		<Reference Include="System.Runtime.Serialization" />
+		<Reference Include="System.Xml" />
+		<Reference Include="System.Xml.Linq" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='uap10.0' or '$(TargetFramework)' == 'MonoAndroid71' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0'">
+	<ItemGroup Condition="'$(TargetFramework)'=='uap10.0' or '$(TargetFramework)' == 'MonoAndroid80' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.13.7" />
     <ProjectReference Include="..\Microsoft.Toolkit.Uwp\Microsoft.Toolkit.Uwp.csproj" />
   </ItemGroup>
@@ -45,10 +48,11 @@
     <Compile Remove="Services\MicrosoftGraph\WinForms\**\*" />
   </ItemGroup>
 
-  <ItemGroup Condition="!('$(TargetFramework)'=='uap10.0')">
-    <Compile Remove="Services\MicrosoftGraph\Platform\Uwp\**\*" />
-    <Compile Remove="Services\OneDrive\Platform\Any\**\*" />
-  </ItemGroup>
+  <ItemGroup Condition="!('$(TargetFramework)'=='uap10.0' or '$(TargetFramework)' == 'MonoAndroid80' or '$(TargetFramework)' == 'xamarinios10' or '$(TargetFramework)' == 'netstandard2.0')">
+		<Compile Remove="Services\MicrosoftGraph\Platform\Uwp\**\*" />
+		<Compile Remove="Services\OneDrive\Platform\Uwp\**\*" />
+		<Compile Remove="PlatformSpecific\Uwp\**\*" />
+	</ItemGroup>
 
   <ItemGroup>
     <Folder Include="Services\MicrosoftGraph\Platform\Uwp\" />
