--- a/Microsoft.Toolkit.Uwp.SampleApp.iOS/Microsoft.Toolkit.Uwp.SampleApp.iOS.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.iOS/Microsoft.Toolkit.Uwp.SampleApp.iOS.csproj
@@ -162,4 +162,7 @@
   <Import Project="Exclusions.props" />
   <!-- fake target to allow the nuget pack to work solution wide -->
   <Target Name="Pack" />
+	
+	<Import Project="..\uno.ui.include.props" />
+
 </Project>
