--- a/Microsoft.Toolkit.Uwp.Connectivity/Microsoft.Toolkit.Uwp.Connectivity.csproj
+++ b/Microsoft.Toolkit.Uwp.Connectivity/Microsoft.Toolkit.Uwp.Connectivity.csproj
@@ -17,4 +17,6 @@
 		<PackageReference Include="Uno.UI" Version="1.23.1-dev.1453" />
 	</ItemGroup>
 
+	<Import Project="..\uno.ui.include.props" />
+
 </Project>
