--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -29,4 +29,6 @@
 		<PackageReference Include="Uno.UI" Version="1.31.0-dev.191" />
 	</ItemGroup>
 
+	<Import Project="..\uno.ui.include.props" />
+
 </Project>
