--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,6 +12,8 @@
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)Toolkit.ruleset</CodeAnalysisRuleSet>
     
     <DefaultLanguage>en-US</DefaultLanguage>
+		<TargetFrameworksOverride>xamarinios10</TargetFrameworksOverride>
+		<!--<TargetFrameworksOverride>uap10.0;MonoAndroid71;xamarinios10;netstandard2.0</TargetFrameworksOverride>-->
 
     <IsDesignProject>$(MSBuildProjectName.Contains('.Design'))</IsDesignProject>
     <IsTestProject>$(MSBuildProjectName.Contains('Test'))</IsTestProject>
@@ -51,7 +53,7 @@
       </PropertyGroup>
       <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
         <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
+        <DebugType>portable</DebugType>
         <DefineConstants>$(DefineConstants);DEBUG;TRACE</DefineConstants>
         <Optimize>false</Optimize>
       </PropertyGroup>
