--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <TargetFramework>uap10.0</TargetFramework>
-    <Title>Windows Community Toolkit Services</Title>
+		<TargetFrameworks>$(TargetFrameworksOverride)</TargetFrameworks>
+		<Title>Windows Community Toolkit Services</Title>
     <Description>This library enables access to different data sources like Microsoft Translator, Facebook, LinkedIn, and Twitter. It is part of the Windows Community Toolkit.</Description>
     <PackageTags>UWP Toolkit Windows Twitter OAuth Facebook LinkedIn Microsoft Translator</PackageTags>
 		
