--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,7 +13,7 @@
     
     <DefaultLanguage>en-US</DefaultLanguage>
 		<!--<TargetFrameworksOverride>xamarinios10</TargetFrameworksOverride>-->
-		<TargetFrameworksOverride>uap10.0;MonoAndroid71;xamarinios10;netstandard2.0</TargetFrameworksOverride>
+		<TargetFrameworksOverride>uap10.0;MonoAndroid80;xamarinios10;netstandard2.0</TargetFrameworksOverride>
 
     <IsDesignProject>$(MSBuildProjectName.Contains('.Design'))</IsDesignProject>
     <IsTestProject>$(MSBuildProjectName.Contains('Test'))</IsTestProject>
@@ -27,7 +27,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-	  <SignAssembly Condition="'$(SignAssembly)' == '' and '$(IsUwpProject)' != 'true'" >true</SignAssembly>
+	  <SignAssembly Condition="'$(SignAssembly)' == '' and '$(IsUwpProject)' != 'true' and '$(TargetFramework)'!='netstandard2.0'" >true</SignAssembly>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)toolkit.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
