--- a/Microsoft.Toolkit.Uwp.Samples.Wpf/Microsoft.Toolkit.Uwp.Samples.Wpf.csproj
+++ b/Microsoft.Toolkit.Uwp.Samples.Wpf/Microsoft.Toolkit.Uwp.Samples.Wpf.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{700B9356-E2C7-437D-AF16-3A34B07EDEEE}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Microsoft.Toolkit.Uwp.Samples.Wpf</RootNamespace>
     <AssemblyName>Microsoft.Toolkit.Uwp.Samples.Wpf</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
@@ -39,7 +39,7 @@
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <NoWarn>;8002</NoWarn>
-    <DebugType>full</DebugType>
+    <DebugType>portable</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>C:\s\nv.github\Uno.WindowsCommunityToolkit\Toolkit.ruleset</CodeAnalysisRuleSet>
@@ -55,6 +55,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>C:\s\nv.github\Uno.WindowsCommunityToolkit\Toolkit.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
