--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -10,9 +10,11 @@
 		<NoWarn>$(NoWarn);Uno0001</NoWarn>
 	</PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='uap10.0' or '$(TargetFramework)' == 'uap10.0.16299'">
     <PackageReference Include="winsdkfb" Version="0.12.20161020.4" />
 
+  </ItemGroup>
+  <ItemGroup>
     <!-- This is here to prevent a conflict in certain circumstances -->
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     
