--- a/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
+++ b/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
@@ -7,7 +7,7 @@
 
 		<!-- This is a temporary workaround for https://github.com/dotnet/sdk/issues/955 -->
     <DebugType>Full</DebugType>
-		<NoWarn>$(NoWarn);CS8002;Uno0001</NoWarn>
+		<NoWarn>$(NoWarn);CS8002;Uno0001;NU1701</NoWarn>
 	</PropertyGroup>
   
   <PropertyGroup Condition="'$(TargetFramework)' == 'uap10.0' or '$(TargetFramework)' == 'uap10.0.16299' ">
