--- a/Microsoft.Toolkit.Uwp.UI.Controls.Graph/Microsoft.Toolkit.Uwp.UI.Controls.Graph.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Graph/Microsoft.Toolkit.Uwp.UI.Controls.Graph.csproj
@@ -7,7 +7,8 @@
     <PackageTags>UWP Toolkit Windows Controls Microsoft Graph AadLogin ProfileCard PeoplePicker SharePointFiles</PackageTags>
 
 		<PackageId>Uno.Microsoft.Toolkit.Uwp.UI.Controls.Graph</PackageId>
-	</PropertyGroup>
+    <NoWarn>$(NoWarn);Uno0001;NU1701</NoWarn>
+  </PropertyGroup>
 
   <ItemGroup>
     <Content Include="Assets\folder.svg" />
