Adjust UWP build

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -32,7 +32,7 @@
   <Choose>
     <When Condition="'$(IsTestProject)' != 'true' and '$(IsSampleProject)' != 'true' and '$(IsDesignProject)' != 'true'">
       <PropertyGroup>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
       </PropertyGroup>
     </When>
   </Choose>
@@ -66,7 +66,7 @@
     <When Condition="'$(IsTestProject)' != 'true' and '$(IsSampleProject)' != 'true' and '$(IsDesignProject)' != 'true'">
       <ItemGroup>
         <!--<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="15.3.83" PrivateAssets="all" />-->
-        <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all" />
+        <!--<PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="all" />-->
 
         <EmbeddedResource Include="**\*.rd.xml" />
         <Page Include="**\*.xaml" Exclude="**\bin\**\*.xaml;**\obj\**\*.xaml" SubType="Designer" Generator="MSBuild:Compile" />
