Adjust github icon

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -83,14 +83,15 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'MonoAndroid80' or '$(TargetFramework)' == 'xamarinios10' ">
-    <NoWarn>$(NoWarn);CS0649;CS0067</NoWarn>
+    <NoWarn>$(NoWarn);CS0649;CS0067;CS1998</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(IsUwpProject)' == 'true'">
 
     <!-- 8002 is a strong named -> non-strong-named reference -->
     <!-- This is valid for platforms other than .NET Framework (and is needed for the UWP targets -->
-    <NoWarn>$(NoWarn);8002</NoWarn>
+    <NoWarn>$(NoWarn);8002;</NoWarn>
+    <NoWarn>$(NoWarn);CS1998</NoWarn>
   </PropertyGroup>
 
   <ItemGroup Condition="!$([MSBuild]::IsOsUnixLike())">
