--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -2,49 +2,107 @@ trigger:
 - master
 - rel/*
 
-variables: 
-  BuildConfiguration: Release
+jobs:
+- job: Windows
+
+  variables: 
+    BuildConfiguration: Release
+    
+  steps:
+  - task: BatchScript@1
+    inputs:
+      filename: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
+      arguments: -no_logo
+      modifyEnvironment: true
+    displayName: Setup Environment Variables
+    
+  - task: NuGetToolInstaller@0
+    displayName: Use NuGet 4.7.0
+    inputs:
+      versionSpec: 4.7.0
   
-steps:
-- task: BatchScript@1
-  inputs:
-    filename: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
-    arguments: -no_logo
-    modifyEnvironment: true
-  displayName: Setup Environment Variables
+  - task: DotNetCoreCLI@2  
+    inputs:
+      command: custom
+      custom: tool
+      arguments: install --tool-path . nbgv
+    displayName: Install NBGV tool
   
-- task: NuGetToolInstaller@0
-  displayName: Use NuGet 4.7.0
-  inputs:
-    versionSpec: 4.7.0
+  - script: nbgv cloud
+    displayName: Set Version
+  
+  - powershell: .\build\Install-WindowsSdkISO.ps1 17763
+    displayName: Insider SDK
+  
+  - powershell: .\build\build.ps1 -target=Package
+    displayName: Build 
+  
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Package Artifacts
+    inputs:
+      pathToPublish: .\Microsoft.Toolkit.Uwp.SampleApp.Wasm\bin\Release\netstandard2.0\dist
+      artifactType: container
+      artifactName: Wasm
+  
+  - task: PublishBuildArtifacts@1
+    displayName: Publish Package Artifacts
+    inputs:
+      pathToPublish: .\bin\nupkg
+      artifactType: container
+      artifactName: WCT-Packages
+    condition: always()
 
-- task: DotNetCoreCLI@2  
-  inputs:
-    command: custom
-    custom: tool
-    arguments: install --tool-path . nbgv
-  displayName: Install NBGV tool
+- job: linux
+  pool:
+    name: Default
+    demands:
+    - agent.os -equals Linux 
 
-- script: nbgv cloud
-  displayName: Set Version
+  variables:
+    NUGET_PACKAGES: $(build.sourcesdirectory)/.nuget
 
-- powershell: .\build\Install-WindowsSdkISO.ps1 17763
-  displayName: Insider SDK
+  steps:
+  - checkout: self
+    clean: true
+  
+  - bash: |
+      sudo apt-get update
+      sudo apt-get install libc6
+      cd $(build.sourcesdirectory)
+      wget https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
+      unzip -o ninja-linux.zip -d ninja-linux
 
-- powershell: .\build\build.ps1 -target=Package
-  displayName: Build 
+    displayName: 'Install Ninja'
 
-- task: PublishBuildArtifacts@1
-  displayName: Publish Package Artifacts
-  inputs:
-    pathToPublish: .\Microsoft.Toolkit.Uwp.SampleApp.Wasm\bin\Release\netstandard2.0\dist
-    artifactType: container
-    artifactName: Wasm
+  - bash: |
+      cd $(build.sourcesdirectory)
+      git clone https://github.com/juj/emsdk.git
+      cd emsdk
+      ./emsdk install sdk-1.38.28-64bit
+      ./emsdk activate sdk-1.38.28-64bit
 
-- task: PublishBuildArtifacts@1
-  displayName: Publish Package Artifacts
-  inputs:
-    pathToPublish: .\bin\nupkg
-    artifactType: container
-    artifactName: WCT-Packages
-  condition: always()
+    displayName: 'Install Emscripten'
+
+  - bash: |
+      export PATH=$PATH:$(build.sourcesdirectory)/ninja-linux
+      source $(build.sourcesdirectory)/emsdk/emsdk_env.sh
+      msbuild /r /p:Configuration=Release $(build.sourcesdirectory)/Microsoft.Toolkit.Uwp.SampleApp.Wasm/Microsoft.Toolkit.Uwp.SampleApp.Wasm.csproj /p:TargetFrameworksOverride=netstandard2.0 /bl:$(build.artifactstagingdirectory)\build.binlog
+
+  - task: CopyFiles@2
+    displayName: 'Publish Wasm Binaries'
+    inputs:
+      SourceFolder: $(build.sourcesdirectory)/Microsoft.Toolkit.Uwp.SampleApp.Wasm/bin/Release/netstandard2.0/dist
+      Contents: '**/*.*'
+      TargetFolder: $(build.artifactstagingdirectory)/wct-wasm/$(RuntimeMode)
+      CleanTargetFolder: false
+      OverWrite: false
+      flattenFolders: false
+
+
+  - task: PublishBuildArtifacts@1
+    # https://developercommunity.visualstudio.com/content/problem/284991/public-vsts-previouw-cant-set-build-number-of-pr-b.html
+    condition: eq(variables['System.PullRequest.IsFork'], 'False')
+    inputs:
+      PathtoPublish: $(build.artifactstagingdirectory)
+      ArtifactName: wct-aot-drop
+      ArtifactType: Container
